--- a/package.json
+++ b/package.json
@@ -2,18 +2,15 @@
   "name": "backend",
   "version": "1.0.0",
   "private": true,
-  "type": "commonjs",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js",
-    "seed": "node seed.js"
+    "dev": "nodemon server.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "health-resource-finder-full": "file:..",
     "mongoose": "^8.6.0"
   },
   "devDependencies": {
